terraform/database_sg.tf
# Create Database Security Group
resource "aws_security_group" "notes-rds-sg" {
  name        = "notes SG"
  description = "Allow inbound traffic from application layer"
  vpc_id      = aws_vpc.notes_vpc.id

  ingress {
    description     = "Allow traffic from application layer"
    from_port       = 3306
    to_port         = 3306
    protocol        = "tcp"
    security_groups = [aws_security_group.notes_sg.id]
  }

  egress {
    from_port   = 32768
    to_port     = 65535
    protocol    = "tcp"
    cidr_blocks = ["0.0.0.0/0"]
  }

  tags = {
    Name = "notes sg"
    Task = "Assessment1"
  }
}
